[B]Retrospect v5.7.x - Changelog - 2024-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
* None

[B]GUI/Settings/Language related[/B]
* None

[B]Channel related[/B]
* Fixed: NPO Recent items did not display videos unrelated to shows.